--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.ivancarballo.archi"
+        applicationId "uk.ivanc.archi"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex:rxandroid:1.0.1'
-
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
