Add MVVM implementation of app

--- a/app-mvvm/build.gradle
+++ b/app-mvvm/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion rootProject.ext.androidCompileSdkVersion
