--- a/app-mvvm/src/main/AndroidManifest.xml
+++ b/app-mvvm/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTop">
@@ -23,9 +23,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RepositoryActivity"
+            android:name=".view.RepositoryActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".view.MainActivity"/>
     </application>
 
 </manifest>
