--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.databinding:dataBinder:1.0-rc2"
     }
 }
 
