--- a/app-mvvm/build.gradle
+++ b/app-mvvm/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     compile dependencies.picasso
     compile dependencies.rxAndroid
     compile dependencies.circleImageView
+
+    testCompile dependencies.jUnit
+    testCompile dependencies.mockito
+    testCompile dependencies.robolectric
 }
