Implement unit tests for app-mvp and change pattern implementation slightly

--- a/app-mvp/build.gradle
+++ b/app-mvp/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     compile dependencies.picasso
     compile dependencies.rxAndroid
     compile dependencies.circleImageView
+
+    testCompile dependencies.jUnit
+    testCompile dependencies.mockito
+    testCompile dependencies.robolectric
 }
