--- a/app-2017/build.gradle
+++ b/app-2017/build.gradle
@@ -29,9 +29,12 @@ dependencies {
     compile dependencies.recyclerView
     compile dependencies.retrofit
     compile dependencies.retrofitConverterGson
-    compile dependencies.retrofitAdapterRxJava
-    compile dependencies.picasso
     compile dependencies.rxAndroid
+    compile dependencies.picasso
     compile dependencies.circleImageView
+    compile dependencies.archComponentsRuntime
+    compile dependencies.archComponentsExt
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlinVersion"
+
+    annotationProcessor dependencies.archComponentsCompiler
 }
