--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 apply from: 'dependencies.gradle'
 
 buildscript {
-    ext.kotlinVersion = '1.1.2-5'
+    ext.kotlinVersion = '1.1.3-2'
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
@@ -14,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
